--- a/src/css/style.css
+++ b/src/css/style.css
@@ -20,19 +20,22 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  width: 100%;
   height: 100vh;
   position: relative;
 }
 
-.portfolioText {
+.portfolioText, .introText {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 5.5rem;
+  color: #212529;
 }
 
-.portfolioParag {
+.portfolioParag, .introParag {
   font-size: 1.75rem;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 700;
+  color: #212529;
 }
 
 .findOut {
@@ -46,6 +49,9 @@
   border-radius: 6px;
   border: none;
   margin-top: 20px;
+}
+.findOut:hover {
+  background-color: #196d87;
 }
 
 .hamburger {
@@ -68,6 +74,46 @@
 .hamburger svg {
   color: #fff;
   width: 30%;
+}
+
+.intro-section {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 50vh;
+}
+
+.introText {
+  font-size: 2rem;
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  line-height: 1.2;
+}
+
+.introParag {
+  margin-bottom: 3rem;
+  font-size: 1.25rem;
+  font-weight: 300;
+}
+
+.offerButton {
+  background-color: #1D809F;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #fff;
+  font-size: 1rem;
+  padding: 1.25rem 2.5rem;
+  cursor: pointer;
+  border-color: #1D809F;
+  border-radius: 6px;
+  border: none;
+  margin-top: 20px;
+  background-color: #212529;
+  color: #fff;
+}
+.offerButton:hover {
+  background-color: #4d5154;
 }
 
 /*# sourceMappingURL=style.css.map */
