--- a/src/sass/layout/portfolio.scss
+++ b/src/sass/layout/portfolio.scss
@@ -12,26 +12,61 @@
 .portfolioText {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 5.5rem;
+    color: $base-text-color
 }
 
 .portfolioParag {
     font-size: 1.75rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 700;
+    color: $base-text-color;
 }
 
 .findOut {
     @include downloadButton;
-    margin-top: 20px;
+    &:hover {
+        background-color: #196d87;
+    }
 }
+
 .hamburger {
     position: fixed;
     z-index: 1;
     top: 15px;
     right: 15px;
     @include hamburger;
+
     svg {
         color: #fff;
         width: 30%;
+    }
+}
+
+.intro-section {
+    @include structure;
+    height: 50vh;
+}
+
+.introText {
+    @extend .portfolioText;
+    font-size: 2rem;
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+    line-height: 1.2;
+}
+
+.introParag {
+    @extend .portfolioParag;
+    margin-bottom: 3rem;
+    font-size: 1.25rem;
+    font-weight: 300;
+}
+
+.offerButton {
+    @include downloadButton;
+    background-color: $second-button-bg-color;
+    color: $third-button-bg-color;
+    &:hover {
+        background-color: #4d5154;
     }
 }
