--- a/src/sass/abstracts/mixin.scss
+++ b/src/sass/abstracts/mixin.scss
@@ -1,11 +1,15 @@
 @mixin portfolio {
+    @include bg-image;
     width: 100%;
     height: 100vh;
+    position: relative;
+    width: 100%;
+}
+
+@mixin bg-image {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
-    width: 100%;
 }
 
 @mixin offer {
@@ -40,14 +44,17 @@
     border: none;
     margin-top: 20px;
 }
+
 @mixin hamburger {
     width: 50px;
     height: 50px;
     border-radius: 6px;
     background-color: rgba(52, 58, 64, 0.5);
+
     &:hover {
         background-color: #343a40;
     }
+
     cursor: pointer;
     @include flex-center;
 }
