--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,10 +8,15 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100%;
   width: 100%;
   height: 100vh;
   position: relative;
   width: 100%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
   background-image: url("https://startbootstrap.github.io/startbootstrap-stylish-portfolio/assets/img/bg-masthead.jpg");
 }
 
@@ -32,10 +37,10 @@
 }
 
 .portfolioParag, .introParag {
-  font-size: 1.75rem;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 700;
-  color: #212529;
+  text-align: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 1.75rem;
 }
 
 .findOut {
@@ -116,10 +121,98 @@
   background-color: #4d5154;
 }
 
+.portfolioOffer, .portfolioRecent {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  background-color: #1D809F;
+  height: 80vh;
+  margin-top: 50px;
+}
+
+.portfoliOfferText, .portfolioRecent h2 {
+  font-weight: 700;
+  text-align: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 3rem;
+  color: #fff;
+}
+
+.portfolioRecent {
+  background-color: #fff;
+  height: 50vh;
+  margin: 30px 0;
+}
+.portfolioRecent h2 {
+  color: #212529;
+}
+
+.serviceText {
+  color: #ecb807;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 1rem;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-around;
+  width: 80%;
+  margin-top: 50px;
+}
+.icons_content {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+}
+.icons_content-iconsItems {
+  background-color: #fff;
+  height: 7rem;
+  width: 7rem;
+  display: block;
+  line-height: 7.5rem;
+  font-size: 2.25rem;
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.icons_content-iconsItems div {
+  font-size: 2.25rem;
+  color: #1D809F;
+}
+.icons_content p {
+  font-weight: 700;
+  text-align: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #fff;
+  font-size: 1.5rem;
+  margin-top: 10px;
+}
+.icons_content span {
+  font-weight: 700;
+  text-align: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: rgba(255, 255, 255, 0.7);
+  font-weight: 300;
+  font-size: 1rem;
+  margin-top: 10px;
+  display: inline-block;
+}
+
 .portfolioWelcome {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100%;
   width: 100%;
   height: 100vh;
   position: relative;
@@ -138,10 +231,12 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  font-size: 3.5rem;
+  height: 100%;
   font-weight: 700;
   text-align: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   max-width: 30rem;
+  font-size: 3.5rem;
 }
 
 .map {
