--- a/src/sass/abstracts/mixin.scss
+++ b/src/sass/abstracts/mixin.scss
@@ -10,6 +10,7 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    height: 100%;
 }
 
 @mixin offer {
@@ -26,6 +27,21 @@
     width: 100%;
 }
 
+@mixin text {
+    font-weight: 700;
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+@mixin icons-items {
+    background-color: #fff;
+    height: 7rem;
+    width: 7rem;
+    display: block;
+    line-height: 7.5rem;
+    font-size: 2.25rem;
+    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+}
 @mixin flex-center {
     display: flex;
     align-items: center;
