--- a/src/sass/layout/portfolio.scss
+++ b/src/sass/layout/portfolio.scss
@@ -1,5 +1,6 @@
 .portfolio {
     @include portfolio;
+    @include bg-image;
     background-image: url("https://startbootstrap.github.io/startbootstrap-stylish-portfolio/assets/img/bg-masthead.jpg");
 }
 
@@ -16,14 +17,13 @@
 }
 
 .portfolioParag {
+    @include text;
     font-size: 1.75rem;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 700;
-    color: $base-text-color;
 }
 
 .findOut {
     @include downloadButton;
+
     &:hover {
         background-color: #196d87;
     }
@@ -66,8 +66,80 @@
     @include downloadButton;
     background-color: $second-button-bg-color;
     color: $third-button-bg-color;
+
     &:hover {
         background-color: #4d5154;
+    }
+}
+
+.portfolioOffer {
+    @include structure;
+    background-color: $button-div-bg-color;
+    height: 80vh;
+    margin-top: 50px;
+}
+
+.portfoliOfferText {
+    @include text;
+    font-size: 3rem;
+    color: $second-base-text-color;
+}
+
+.portfolioRecent {
+    @extend .portfolioOffer;
+    background-color: $second-base-text-color;
+    height: 50vh;
+    margin: 30px 0;
+
+    & h2 {
+        @extend .portfoliOfferText;
+        color: $base-text-color;
+    }
+}
+
+.serviceText {
+    color: $service-color;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1rem;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.icons {
+    @include flex-center;
+    justify-content: space-around;
+    width: 80%;
+    margin-top: 50px;
+
+    &_content {
+        @include structure;
+
+        &-iconsItems {
+            @include icons-items;
+            @include flex-center;
+
+            & div {
+                font-size: 2.25rem;
+                color: $button-div-bg-color;
+            }
+
+        }
+
+        & p {
+            @include text;
+            color: $second-base-text-color;
+            font-size: 1.5rem;
+            margin-top: 10px;
+        }
+
+        & span {
+            @include text;
+            color: rgba(255, 255, 255, 0.7);
+            font-weight: 300;
+            font-size: 1rem;
+            margin-top: 10px;
+            display: inline-block;
+        }
     }
 }
 
@@ -82,10 +154,9 @@
     @include structure;
     @extend .portfolioText;
     @include bg-image;
-    font-size: 3.5rem;
-    font-weight: 700;
-    text-align: center;
+    @include text;
     max-width: 30rem;
+    font-size: 3.5rem;
 }
 
 .map {
