--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,3 +2,4 @@
 @import "./abstracts/mixin.scss";
 @import "./base/reset.scss";
 @import "./layout/portfolio.scss";
+@import "./layout/mobile.scss";
