--- a/src/sass/abstracts/mixin.scss
+++ b/src/sass/abstracts/mixin.scss
@@ -42,12 +42,24 @@
     box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
     border-radius: 50%;
 }
+@mixin icons-items-mobile {
+    @include icons-items;
+    height: 5rem;
+    width: 5rem;
+}
 @mixin flex-center {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
+@mixin social-links {
+    height: 4rem;
+    width: 4rem;
+    background-color: #1D809F;
+    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
+    border-radius: 50% ;
+    cursor: pointer;
+}
 @mixin downloadButton {
     background-color: $button-div-bg-color;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
