--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
+  border: 0;
 }
 
 .portfolio {
@@ -371,6 +372,15 @@
 .social div {
   color: #fff;
   margin: 0 20px;
+}
+
+.copy {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 700;
+  text-align: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
